# supabase-auth-cross-platform

./: README.md
nextjs15-fastapi/: Makefile
nextjs15-fastapi/backend/: .gitignore  main.py  pyproject.toml
nextjs15-fastapi/backend/src/: dependencies.py  main.py
nextjs15-fastapi/frontend/app/: actions.ts
nextjs15-fastapi/frontend/app/(auth-pages)/sign-in/: page.tsx
nextjs15-fastapi/frontend/app/protected/: page.tsx
nextjs15-fastapi/frontend/utils/supabase/: client.ts  middleware.ts  server.ts
